--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -1334,7 +1334,8 @@ header .search__form input {
     }
 
     header {
-        margin-bottom: 24px;
+        /* margin-bottom: 24px; */
+        padding-bottom: 24px !important;
     }
 }
 
