--- a/css/custom-new.css
+++ b/css/custom-new.css
@@ -1557,5 +1557,5 @@ header .search__form input {
 }
 
 .b-news__short__big a:before {
-    transition: background .3s .1s, height 0s;
+    transition: background .3s, height .3s;
 }
